docentes de materias

--- a/planTrabajo.html
+++ b/planTrabajo.html
@@ -70,8 +70,8 @@
         <div class="d-flex justify-content-center align-items-center">
             <div class="form-inline mb-2">
                 <label class="form-label text-input mr-3">Búsqueda por nombre/clave</label>
-                <input id="academiaSeleccionada" type="search" class="form-control text-input bg-input rounded-pill mx-auto" list="listaAcademias">
-                <datalist id="listaAcademias">
+                <input id="academiaSeleccionadaPlan" type="search" class="form-control text-input bg-input rounded-pill mx-auto" list="listaAcademiasParaPlan">
+                <datalist id="listaAcademiasParaPlan">
                 </datalist>
             </div>
         </div>
@@ -79,8 +79,8 @@
         <div class="d-flex justify-content-center align-items-center" id="buscarPlan">
             <div class="form-inline mb-2">
                 <label class="form-label text-input mr-3">Búsqueda del plan</label>
-                <input id="planSeleccionado" type="search" class="form-control text-input bg-input rounded-pill mx-auto" list="listaDePlanes">
-                <datalist id="listaDePlanes">
+                <input id="planSeleccionadoEditar" type="search" class="form-control text-input bg-input rounded-pill mx-auto" list="listaDePlanesEditar">
+                <datalist id="listaDePlanesEditar">
                 </datalist>
             </div>
         </div>
