evidencia entregada y on entrada

--- a/subir.html
+++ b/subir.html
@@ -67,6 +67,17 @@
         </div>
     </div>
 
+    <div class="container mb-3">
+        <div class="btn-group btn-group-toggle w-100" data-toggle="buttons">
+            <label name="options" class="btn btn-secondary active opciones text-input">
+                <input type="radio" name="options" id="option1" autocomplete="off"> Pendientes
+            </label>
+            <label name="options" class="btn btn-secondary opciones text-input">
+                <input type="radio" name="options" id="option3" autocomplete="off"> Entregadas
+            </label>
+        </div>
+    </div>
+
     <div id="area" class="container">
     </div>
 
