--- a/planTrabajo.html
+++ b/planTrabajo.html
@@ -198,7 +198,7 @@
                 click para editar
             </div>
             <div class="col-1-mio sin d-flex justify-content-center align-items-center click">
-                <input name="fecha" id="fecha_1" type="datetime-local" class="form-control bg-input ml-2 fecha_2" />
+                <input id="f_1" name="fecha" type="datetime-local" class="form-control bg-input ml-2 fecha_2" />
             </div>
             <div name="evaluacion" id="Evidencia_1" class="col-2-mio sin d-flex justify-content-center align-items-center click">
                 click para editar
@@ -223,7 +223,7 @@
                 click para editar
             </div>
             <div class="col-1-mio sin d-flex justify-content-center align-items-center click">
-                <input name="fecha" id="fecha_2" type="datetime-local" class="form-control bg-input ml-2 fecha_2" />
+                <input id="f_2" name="fecha" type="datetime-local" class="form-control bg-input ml-2 fecha_2" />
             </div>
             <div name="evaluacion" id="Evidencia_2" class="col-2-mio sin d-flex justify-content-center align-items-center click">
                 click para editar
@@ -247,7 +247,7 @@
                 click para editar
             </div>
             <div class="col-1-mio sin d-flex justify-content-center align-items-center click">
-                <input name="fecha" id="fecha_3" type="datetime-local" class="form-control bg-input ml-2 fecha_2" />
+                <input id="f_3" name="fecha" type="datetime-local" class="form-control bg-input ml-2 fecha_2" />
             </div>
             <div name="evaluacion" id="Evidencia_3" class="col-2-mio sin d-flex justify-content-center align-items-center click">
                 click para editar
@@ -272,7 +272,7 @@
                 click para editar
             </div>
             <div class="col-1-mio sin d-flex justify-content-center align-items-center click">
-                <input name="fecha" id="fecha_4" type="datetime-local" class="form-control bg-input ml-2 fecha_2" />
+                <input id="f_4" name="fecha" type="datetime-local" class="form-control bg-input ml-2 fecha_2" />
             </div>
             <div name="evaluacion" id="Evidencia_4" class="col-2-mio sin d-flex justify-content-center align-items-center click">
                 click para editar
@@ -297,7 +297,7 @@
                 click para editar
             </div>
             <div class="col-1-mio sin d-flex justify-content-center align-items-center click">
-                <input name="fecha" id="fecha_5" type="datetime-local" class="form-control bg-input ml-2 fecha_2" />
+                <input id="f_5" name="fecha" type="datetime-local" class="form-control bg-input ml-2 fecha_2" />
             </div>
             <div name="evaluacion" id="Evidencia_5" class="col-2-mio sin d-flex justify-content-center align-items-center click">
                 click para editar
@@ -322,7 +322,7 @@
                 click para editar
             </div>
             <div class="col-1-mio sin d-flex justify-content-center align-items-center click">
-                <input name="fecha" id="fecha_6" type="datetime-local" class="form-control bg-input ml-2 fecha_2" />
+                <input id="f_6" name="fecha" type="datetime-local" class="form-control bg-input ml-2 fecha_2" />
             </div>
             <div name="evaluacion" id="Evidencia_6" class="col-2-mio sin d-flex justify-content-center align-items-center click">
                 click para editar
@@ -347,7 +347,7 @@
                 click para editar
             </div>
             <div class="col-1-mio sin d-flex justify-content-center align-items-center click">
-                <input name="fecha" id="fecha_7" type="datetime-local" class="form-control bg-input ml-2 fecha_2" />
+                <input id="f_7" name="fecha" type="datetime-local" class="form-control bg-input ml-2 fecha_2" />
             </div>
             <div name="evaluacion" id="Evidencia_7" class="col-2-mio sin d-flex justify-content-center align-items-center click">
                 click para editar
@@ -372,7 +372,7 @@
                 click para editar
             </div>
             <div class="col-1-mio sin d-flex justify-content-center align-items-center click">
-                <input name="fecha" id="fecha_8" type="datetime-local" class="form-control bg-input ml-2 fecha_2" />
+                <input id="f_8" name="fecha" type="datetime-local" class="form-control bg-input ml-2 fecha_2" />
             </div>
             <div name="evaluacion" id="Evidencia_8" class="col-2-mio sin d-flex justify-content-center align-items-center click">
                 click para editar
@@ -397,7 +397,7 @@
                 click para editar
             </div>
             <div class="col-1-mio sin d-flex justify-content-center align-items-center click">
-                <input name="fecha" id="fecha_9" type="datetime-local" class="form-control bg-input ml-2 fecha_2" />
+                <input id="f_9" name="fecha" type="datetime-local" class="form-control bg-input ml-2 fecha_2" />
             </div>
             <div name="evaluacion" id="Evidencia_9" class="col-2-mio sin d-flex justify-content-center align-items-center click">
                 click para editar
