--- a/planTrabajo.html
+++ b/planTrabajo.html
@@ -166,7 +166,7 @@
                 <label class="text-center">Acciones específicas para cada actividad</label>
             </div>
             <div class="col-1-mio font-weight-bold d-flex justify-content-center align-items-center">
-                <label class="text-center">Asignaturas en las que imparte</label>
+                <label class="text-center">Asignaturas en las que impacta</label>
             </div>
             <div class="col-1-mio font-weight-bold d-flex justify-content-center align-items-center">
                 <label class="text-center">Responsable</label>
